# solution-template

./: CMakeLists.txt  LICENSE  gentests.cpp  solution.cpp
tests/: testrunner.cpp
